feat: Implement P1 Core Functionality - Multi-Issuer JWT Authentication (#67)
* feat: Implement P1 Core Functionality - Authorization and Test Infrastructure

- Add scope and role validation with AuthorizationValidator utility class
- Implement per-issuer authorization configuration support
- Add flow file attributes: jwt.scopes, jwt.roles, jwt.authorized
- Add bypass-authorization flag for explicit authorization bypass
- Remove YAML configuration support per user request
- Add comprehensive unit tests for authorization functionality
- Fix test import issues and update test structure
- Update IMPLEMENTATION-PLAN.adoc with pre-1.0 rules and completion steps

Authorization features:
- Support for required-scopes and required-roles per issuer
- Configurable AND/OR logic with require-all-scopes/require-all-roles
- Case-sensitive/insensitive matching options
- Pre-1.0 behavior: no authorization config = authorized (fail-safe default)

Note: Unit tests currently fail due to cui-jwt-validation library requiring
at least one issuer configuration. This is a known issue with the mock tests.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* feat: Implement require-valid-token flag for optional JWT validation

- Add support for require-valid-token property (default: true)
- When set to false, allows requests without tokens to pass to SUCCESS
- Token validation is still enforced when tokens are present
- Add jwt.present attribute to indicate token presence in flow files
- Update tests to verify require-valid-token behavior
- Handle case where no issuer configurations exist when require-valid-token=false

This enables use cases where JWT validation is optional, allowing
anonymous/unauthenticated requests to pass through when explicitly configured.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>

* test: Fix test setup for require-valid-token functionality

- Update tes